cmake_minimum_required(VERSION 4.0)
project(CXXHeaderDump)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(CXXHeaderDump
        ABP_MGG_Banner.hpp
        ACLPlugin.hpp
        ACLPlugin_enums.hpp
        ActiveProductionModifiersTooltip.hpp
        ActiveYieldModifiersTooltip.hpp
        ActorLayerUtilities.hpp
        ActorSequence.hpp
        ActorSequence_enums.hpp
        addSquadCard.hpp
        AdvancedWidgets.hpp
        AIModule.hpp
        AIModule_enums.hpp
        ALS_AI_Controller.hpp
        ALS_Animation_BPI.hpp
        ALS_AnimBP.hpp
        ALS_AnimMan_CharacterBP.hpp
        ALS_Base_CharacterBP.hpp
        ALS_BTTask_GetRandomLocation.hpp
        ALS_BTTask_SetFocus.hpp
        ALS_Camera_BPI.hpp
        ALS_Character_BPI.hpp
        ALS_ComponentAndTransform.hpp
        ALS_Controller_BPI.hpp
        ALS_Gait_enums.hpp
        ALS_MovementAction_enums.hpp
        ALS_MovementState_enums.hpp
        ALS_OverlayState_enums.hpp
        ALS_RotationMode_enums.hpp
        ALS_Stance_enums.hpp
        ALS_ViewMode_enums.hpp
        AmbienceDataStruct.hpp
        AnimationCore.hpp
        AnimationCore_enums.hpp
        AnimationSharing.hpp
        AnimGraphRuntime.hpp
        AnimGraphRuntime_enums.hpp
        ApexDestruction.hpp
        ApexDestruction_enums.hpp
        AppleImageUtils.hpp
        AppleImageUtils_enums.hpp
        approvalEffectWidget.hpp
        approvalFactorWidget.hpp
        ArmoryItem.hpp
        AssetRegistry.hpp
        AssetRegistry_enums.hpp
        AssetTags.hpp
        AssetTags_enums.hpp
        AsyncLoadingScreen.hpp
        AsyncLoadingScreen_enums.hpp
        AudioAnalyzer.hpp
        AudioCapture.hpp
        AudioExtensions.hpp
        AudioExtensions_enums.hpp
        AudioLinkCore.hpp
        AudioLinkEngine.hpp
        AudioMixer.hpp
        AudioMixer_enums.hpp
        AudioPlatformConfiguration.hpp
        AudioPlatformConfiguration_enums.hpp
        AudioSynesthesia.hpp
        AudioSynesthesia_enums.hpp
        AudioWidgets.hpp
        AudioWidgets_enums.hpp
        AutomationUtils.hpp
        AutoSettings.hpp
        AutoSettingsInput.hpp
        AutoSettingsInput_enums.hpp
        AvfMediaFactory.hpp
        battlefield_BP.hpp
        bellSelectorWidget.hpp
        BigBuildingTooltip.hpp
        BigMap.hpp
        BigMap3d.hpp
        BigTooltip_ApprovalAndPublicOrder.hpp
        BigTooltip_MapPreview.hpp
        BigTooltip_Paragraph.hpp
        BigTooltipGeneric.hpp
        BigTooltipMechanics.hpp
        BigTooltipPolicy.hpp
        BigTooltipSeasons.hpp
        BigTooltipUnit.hpp
        BigTooltipUpgrade.hpp
        blackTransition.hpp
        Bow_AnimBP.hpp
        BP_ActorBase.hpp
        BP_ActorBase_DUPL_1.hpp
        BP_API_MainMenu_Mod.hpp
        BP_API_Mod.hpp
        BP_API_ModApi.hpp
        BP_API_ModBinder.hpp
        BP_API_ObjectBase.hpp
        BP_API_ObjectBase_DUPL_1.hpp
        BP_API_PauseMenu_Mod.hpp
        BP_API_RegisterModResult.hpp
        BP_API_StaticFunctions.hpp
        BP_API_StaticFunctions_DUPL_1.hpp
        BP_API_StaticFunctions_DUPL_2.hpp
        BP_BloodDecal.hpp
        BP_BuildingMaster.hpp
        BP_HudCPP.hpp
        BP_InterfaceBase.hpp
        BP_InterfaceBase_DUPL_1.hpp
        BP_Lake.hpp
        BP_MLGameInstance.hpp
        BP_ObjectBase.hpp
        BP_PerkCardSlot.hpp
        BP_PerkEffect.hpp
        BP_PerkOverviewPanel.hpp
        BP_PerkSelectionCard.hpp
        BP_PerkSelectionPanel.hpp
        BP_Region.hpp
        BP_RichTextImageDecorator.hpp
        BP_River.hpp
        BP_SimpleBirdFlock.hpp
        BP_SoundBuddy.hpp
        BP_Stream.hpp
        BP_TabShifterCommon.hpp
        BP_UnitSpawner.hpp
        BP_VillageSpawner.hpp
        BR_ChoppedSmallLog.hpp
        buildingCardWidget.hpp
        buildingCategorySpacer.hpp
        buildingFloater.hpp
        BuildPatchServices.hpp
        BunchedGoodsTooltip.hpp
        c_cottage14m.hpp
        CableComponent.hpp
        CameraShake_Notify.hpp
        castleFloater.hpp
        castleFloater_platformLevel.hpp
        castleFloater_wallOptionWidget.hpp
        castlePlanner.hpp
        census.hpp
        challengeWidget.hpp
        changeRegionOwnershipPayload.hpp
        Chaos.hpp
        Chaos_enums.hpp
        ChaosCaching.hpp
        ChaosCaching_enums.hpp
        ChaosCloth.hpp
        ChaosCloth_enums.hpp
        ChaosNiagara.hpp
        ChaosNiagara_enums.hpp
        ChaosSolverEngine.hpp
        ChaosSolverEngine_enums.hpp
        ChaosVDBlueprint.hpp
        CharacterPortrait.hpp
        CharacterPortraitDragBP.hpp
        CharacterPortraitDragWidget.hpp
        CharacterSlot.hpp
        ChoiceTooltip.hpp
        CinematicCamera.hpp
        CinematicCamera_enums.hpp
        claimProgress.hpp
        ClothingSystemRuntimeCommon.hpp
        ClothingSystemRuntimeCommon_enums.hpp
        ClothingSystemRuntimeInterface.hpp
        ClothingSystemRuntimeInterface_enums.hpp
        ClothingSystemRuntimeNv.hpp
        ClothingSystemRuntimeNv_enums.hpp
        coatContentGridSelect.hpp
        coatContentItem.hpp
        CoatField.hpp
        coatOfArms.hpp
        CoatOfArms_OLD.hpp
        CoatOfArmsLibraryBP.hpp
        coatsDynamic.hpp
        colorWidget.hpp
        ComputeFramework.hpp
        ComputeFramework_enums.hpp
        Constraints.hpp
        Constraints_enums.hpp
        ConstructionBP.hpp
        constructionFeedbackWidget.hpp
        constructionGoodsWidget.hpp
        constructionList_Item.hpp
        ControlRig.hpp
        ControlRig_enums.hpp
        ControlRigSpline.hpp
        ControlRigSpline_enums.hpp
        ControlTooltipPanel.hpp
        CoreOnline.hpp
        CoreOnline_enums.hpp
        CoreUObject.hpp
        CoreUObject_enums.hpp
        costResource.hpp
        createNewSave.hpp
        CreditLine.hpp
        CreditsPage.hpp
        cropOption.hpp
        CsvMetrics.hpp
        currentClaimingWidget.hpp
        CustomMeshComponent.hpp
        CustomPaperTooltip.hpp
        CustomTooltip.hpp
        CustomTooltipLarge.hpp
        DataflowCore.hpp
        DataflowCore_enums.hpp
        DataflowEngine.hpp
        DataflowEngine_enums.hpp
        DataflowEnginePlugin.hpp
        DataflowNodes.hpp
        DataflowSimulation.hpp
        DataRegistry.hpp
        DataRegistry_enums.hpp
        DecoratedFrameWidget.hpp
        DefaultRadioButton.hpp
        DefaultRadioSelectSetting.hpp
        DemolitionConfirm.hpp
        DeveloperSettings.hpp
        developmentPanelTree.hpp
        DirectionalLightActor.hpp
        divider.hpp
        DLSS.hpp
        DLSS_enums.hpp
        DLSSBlueprint.hpp
        DLSSBlueprint_enums.hpp
        DmgTypeBP_Environmental.hpp
        DMS_Mood_enums.hpp
        DMS_Track.hpp
        DynamicMontageParams.hpp
        DynamicWidgetPooler.hpp
        EarlyAccessWidget.hpp
        EarlyBlendOut_NotifyState.hpp
        Engine.hpp
        Engine_enums.hpp
        EngineCameras.hpp
        EngineCameras_enums.hpp
        EngineMessages.hpp
        EngineSettings.hpp
        EngineSettings_enums.hpp
        EnhancedInput.hpp
        EnhancedInput_enums.hpp
        EquipmentSlot_enums.hpp
        equipmentStat.hpp
        equipmentVariationCustomizationWidget.hpp
        extensionSlotWidget.hpp
        EyeTracker.hpp
        EyeTracker_enums.hpp
        FacialAnimation.hpp
        FallenTreeBP.hpp
        FamilyConsumptionItemEntry.hpp
        FamilyConsumptionTooltip.hpp
        FamilyEntry.hpp
        FamilyMember.hpp
        FFXFSR3Settings.hpp
        FFXFSR3Settings_enums.hpp
        FieldNotification.hpp
        FieldSystemEngine.hpp
        FogBP.hpp
        Foliage.hpp
        Foliage_enums.hpp
        foliageCustomData.hpp
        Footstep_AnimNotify.hpp
        FootstepType_enums.hpp
        FractureEngine_enums.hpp
        fuelStocks.hpp
        FullBodyIK.hpp
        FullBodyIK_enums.hpp
        fullscreenConfirmationGeneric.hpp
        GameplayAbilities.hpp
        GameplayAbilities_enums.hpp
        GameplayCameras.hpp
        GameplayCameras_enums.hpp
        GameplayStateTreeModule.hpp
        GameplayTags.hpp
        GameplayTags_enums.hpp
        GameplayTasks.hpp
        GameplayTasks_enums.hpp
        gameSetupPresetTooltip.hpp
        gameSummarySceren.hpp
        GateControl.hpp
        generalMarketTradeWidget.hpp
        genericAchievement_EventMessage.hpp
        GeometryCache.hpp
        GeometryCacheTracks.hpp
        GeometryCollectionDepNodes.hpp
        GeometryCollectionDepNodes_enums.hpp
        GeometryCollectionEngine.hpp
        GeometryCollectionEngine_enums.hpp
        GeometryCollectionNodes.hpp
        GeometryCollectionNodes_enums.hpp
        GeometryCollectionTracks.hpp
        GeometryFramework.hpp
        GeometryFramework_enums.hpp
        goodIDentry.hpp
        GoodProductionTrackerWidget.hpp
        goodStat.hpp
        GroundedEntryState_AnimNotify.hpp
        GroundedEntryState_enums.hpp
        HairStrandsCore.hpp
        HairStrandsCore_enums.hpp
        HairStrandsDeformer.hpp
        HairStrandsDeformer_enums.hpp
        HeadMountedDisplay.hpp
        HeadMountedDisplay_enums.hpp
        HideCursorWidget.hpp
        HipsDirection_enums.hpp
        HireConfirmation.hpp
        hiredMercenaryCompanyBanner.hpp
        hiredMercenaryPanel.hpp
        HoldoutComposite.hpp
        HorizontalRadioSelect.hpp
        HoverableSegment.hpp
        HttpNetworkReplayStreaming_enums.hpp
        iconButton.hpp
        IKRig.hpp
        IKRig_enums.hpp
        ImageCore.hpp
        ImageWriteQueue.hpp
        ImageWriteQueue_enums.hpp
        ImgMedia.hpp
        ImgMediaEngine.hpp
        ImgMediaFactory.hpp
        InputCore.hpp
        InputCore_enums.hpp
        InputRow.hpp
        InteractiveToolsFramework.hpp
        InteractiveToolsFramework_enums.hpp
        InterchangeCommon_enums.hpp
        InterchangeCommonParser.hpp
        InterchangeCommonParser_enums.hpp
        InterchangeCore.hpp
        InterchangeCore_enums.hpp
        InterchangeEngine.hpp
        InterchangeEngine_enums.hpp
        InterchangeExport.hpp
        InterchangeFactoryNodes.hpp
        InterchangeFactoryNodes_enums.hpp
        InterchangeImport.hpp
        InterchangeImport_enums.hpp
        InterchangeMessages.hpp
        InterchangeNodes.hpp
        InterchangeNodes_enums.hpp
        InterchangePipelines.hpp
        InterchangePipelines_enums.hpp
        Inventory.hpp
        Inventory_Item.hpp
        IrisCore.hpp
        IrisCore_enums.hpp
        JsonUtilities.hpp
        Landmass.hpp
        Landmass_enums.hpp
        Landscape.hpp
        Landscape_enums.hpp
        LandscapePatch.hpp
        LandscapePatch_enums.hpp
        languageEntry.hpp
        Large_Map_Bounds.hpp
        LargeLake.hpp
        LeanAmount.hpp
        legacyViewWidget.hpp
        letterCreator.hpp
        letterParagrahSlot.hpp
        letterParagraph.hpp
        levelButton.hpp
        LevelSequence.hpp
        LiveLink.hpp
        LiveLink_enums.hpp
        LiveLinkAnimationCore.hpp
        LiveLinkComponents.hpp
        LiveLinkInterface.hpp
        LiveLinkInterface_enums.hpp
        LiveLinkMessageBusFramework.hpp
        LiveLinkMovieScene.hpp
        LivestockEntry.hpp
        livestockMarketWidget.hpp
        livestockTooltip.hpp
        LocalFileNetworkReplayStreaming_enums.hpp
        LocalizableMessage.hpp
        LocalizableMessageBlueprint.hpp
        localizedTextBox.hpp
        LocationServicesBPLibrary.hpp
        LocationServicesBPLibrary_enums.hpp
        LogEntry.hpp
        LogEntryFlair.hpp
        LogEntryTint_enums.hpp
        main_menu_lord_customization.hpp
        mainMenu_GameSetup.hpp
        mainMenu_GameSetupPresetButton.hpp
        MainMenu_LoadingThrobber.hpp
        mainMenu_widget.hpp
        mainTabButton.hpp
        MaintenanceModifierEntry.hpp
        maintenanceSlot.hpp
        MaintenanceTooltip.hpp
        maintenanceTypeEntry.hpp
        MainUICPP.hpp
        MainWiki.hpp
        manorDetails.hpp
        ManorLords.hpp
        ManorLords_enums.hpp
        Mantle_Asset.hpp
        Mantle_Params.hpp
        Mantle_TraceSettings.hpp
        MantleType_enums.hpp
        mapSelectionEntry.hpp
        marketSupplyMeter.hpp
        marketSupplyTooltip.hpp
        marketSupplyWidget.hpp
        MassActors.hpp
        MassActors_enums.hpp
        MassCommon.hpp
        MassEntity.hpp
        MassEntity_enums.hpp
        MassEQS.hpp
        MassEQS_enums.hpp
        MassGameplayDebug.hpp
        MassGameplayDebug_enums.hpp
        MassLOD.hpp
        MassLOD_enums.hpp
        MassMovement.hpp
        MassReplication.hpp
        MassRepresentation.hpp
        MassRepresentation_enums.hpp
        MassSignals.hpp
        MassSimulation.hpp
        MassSmartObjects.hpp
        MassSmartObjects_enums.hpp
        MassSpawner.hpp
        MassSpawner_enums.hpp
        MaterialShaderQualitySettings.hpp
        MaterialShaderQualitySettings_enums.hpp
        MD_ControllerHotkey.hpp
        MD_NaviAutoButton.hpp
        MD_NaviAutoFocusHighlight.hpp
        MD_NaviAutoHotkey.hpp
        MD_NaviAutoTooltip.hpp
        MD_NaviComboBoxWrapper.hpp
        MD_NaviConsoleCursor.hpp
        MD_NaviHijackProxy.hpp
        MediaAssets.hpp
        MediaAssets_enums.hpp
        MediaCompositing.hpp
        MediaPlate.hpp
        MediaPlate_enums.hpp
        MediaUtils.hpp
        MediaUtils_enums.hpp
        Medium_Map_Bounds.hpp
        menu_saveLoadMenu.hpp
        menu_settingsWrapper.hpp
        menuButton.hpp
        MenuPawn.hpp
        mercenaryCompanyCard.hpp
        mercenaryScreen.hpp
        mercenarySimpleCard.hpp
        MeshDescription.hpp
        MeshDescription_enums.hpp
        MeshModelingTools.hpp
        MeshModelingTools_enums.hpp
        MeshModelingToolsExp.hpp
        MeshModelingToolsExp_enums.hpp
        MessageFullscreen.hpp
        MessageTutorialFullscreen.hpp
        MetaHumanSDKRuntime.hpp
        MetaHumanSDKRuntime_enums.hpp
        MetasoundEngine.hpp
        MetasoundEngine_enums.hpp
        MetasoundFrontend.hpp
        MetasoundFrontend_enums.hpp
        mineCollapseChance.hpp
        minimapIcon.hpp
        MinimapTree.hpp
        ML_DefaultComboBoxSetting.hpp
        ML_DefaultRadioSelectSetting.hpp
        ML_ResolutionFactoryConvenient.hpp
        ML_StyledRadioButton_SmallTabHighlightable.hpp
        ML_VANotifyHandler.hpp
        MLCheatManager.hpp
        MLDebug_DisableJobWidget.hpp
        MLDebugFilterCheckbox.hpp
        MLDebuggerWindow.hpp
        MLDefaultCheckbox.hpp
        MLDefaultRadioButton.hpp
        MLDefaultRadioButton_fullscreenmode.hpp
        MLDefaultRadioButton_LeftAligned.hpp
        MLDefaultRadioButton_settingUpdateFilter.hpp
        MLDefaultSlider.hpp
        MLDefaultSpinner.hpp
        MLPlayerController.hpp
        MLStyledRadioButtonB.hpp
        MLStyledRadioButtonB_smaller.hpp
        MobilePatchingUtils.hpp
        ModActor.hpp
        ModActor_DUPL_1.hpp
        ModActor_DUPL_2.hpp
        ModActor_DUPL_3.hpp
        ModActor_DUPL_4.hpp
        ModelingComponents.hpp
        ModelingComponents_enums.hpp
        ModelingOperators.hpp
        ModelingOperators_enums.hpp
        MovementAction_NotifyState.hpp
        MovementDirection_enums.hpp
        MovementSettings.hpp
        MovementSettings_Stance.hpp
        MovementSettings_State.hpp
        MoviePlayer.hpp
        MoviePlayer_enums.hpp
        MovieScene.hpp
        MovieScene_enums.hpp
        MovieSceneCapture.hpp
        MovieSceneCapture_enums.hpp
        MovieSceneTracks.hpp
        MovieSceneTracks_enums.hpp
        MRMesh.hpp
        MRMesh_enums.hpp
        MyDirector.hpp
        MyPawnCPP_BP3.hpp
        NavigationSystem.hpp
        NavigationSystem_enums.hpp
        NDA_widget.hpp
        NetCore.hpp
        NetCore_enums.hpp
        Niagara.hpp
        Niagara_enums.hpp
        NiagaraAnimNotifies.hpp
        NiagaraCore.hpp
        NiagaraCore_enums.hpp
        NiagaraShader.hpp
        NiagaraShader_enums.hpp
        NiagaraSimCaching.hpp
        NiagaraSimCaching_enums.hpp
        NNE.hpp
        NNE_enums.hpp
        NNEDenoiser.hpp
        NNEDenoiser_enums.hpp
        NNERuntimeORT.hpp
        NNERuntimeORT_enums.hpp
        OnlineSubsystem.hpp
        OnlineSubsystem_enums.hpp
        OnlineSubsystemEOS.hpp
        OnlineSubsystemGOG.hpp
        OnlineSubsystemSteam.hpp
        OnlineSubsystemUtils.hpp
        OnlineSubsystemUtils_enums.hpp
        OodleNetworkHandlerComponent.hpp
        OodleNetworkHandlerComponent_enums.hpp
        OptimusCore.hpp
        OptimusCore_enums.hpp
        OptimusSettings.hpp
        OptimusSettings_enums.hpp
        Overlay.hpp
        overlayLegend.hpp
        OverlayOverride_NotifyState.hpp
        PacketHandler.hpp
        packTrainPlanner_connection.hpp
        packTrainPlanner_InterRegion.hpp
        paintWidget.hpp
        Paper2D.hpp
        Paper2D_enums.hpp
        paraPick.hpp
        pawnButton.hpp
        PBIK.hpp
        PBIK_enums.hpp
        PhysicsCore.hpp
        PhysicsCore_enums.hpp
        playerLordsPanel.hpp
        PlotDetailsSubsection.hpp
        plotDetailsTooltip.hpp
        PlusMinus.hpp
        policyWidget.hpp
        poor_alert.hpp
        popIcon.hpp
        populationDetailsTooltip.hpp
        PopupData.hpp
        popupMessageWidget.hpp
        portraitItem.hpp
        portraitSelection.hpp
        potentialFactorWidget.hpp
        Price.hpp
        problemBanner.hpp
        ProblemBannerList.hpp
        ProceduralMeshComponent.hpp
        ProceduralMeshComponent_enums.hpp
        ProducedGoodWidget.hpp
        ProductionCategoryTooltip.hpp
        productionFocusChoice.hpp
        productionFocusWidget.hpp
        ProductionTimeEntry.hpp
        ProductivityPanel.hpp
        ProductivityPanel_Tooltip.hpp
        ProductivityTrackerWidget.hpp
        progressTrackingButton.hpp
        progressTrackingTooltip.hpp
        PropertyBindingUtils.hpp
        PropertyBindingUtils_enums.hpp
        PropertyPath.hpp
        PropertyPath_enums.hpp
        purposeIcon.hpp
        QuestDecorationData.hpp
        questItem.hpp
        questMessageElaborate.hpp
        questObjective.hpp
        QueuedEventMessage.hpp
        QueuedPopup.hpp
        quickSettings.hpp
        recruitmentCard.hpp
        RegionDropdown.hpp
        regionIconWidget.hpp
        regionName_BP.hpp
        regionOwnershipEntry.hpp
        RegionPanel.hpp
        regionProductionGraphDataPoint_Widget.hpp
        regionProductionGraphLabelWidget.hpp
        regionProductionGraphTooltipWidget.hpp
        regionProductionPanel_Widget.hpp
        regionProductionStockEntry_Widget.hpp
        regionProductionTooltipEntry.hpp
        regionViewOverlay.hpp
        RegionWidget.hpp
        RegionWidgetNew.hpp
        removeRoadConfirmPrompt.hpp
        renameFullscreen.hpp
        renameSave.hpp
        Renderer.hpp
        Renderer_enums.hpp
        requiredEquipment.hpp
        requirementRating.hpp
        RequirementRatingSimplePip.hpp
        ResidentialRequirementCollectionItemSubcategory.hpp
        ResidentialRequirementCollectionWidget.hpp
        ResidentialRequirementDynamicSupplyCategory.hpp
        residentialWidgetFull.hpp
        resolutionConfirmation.hpp
        resolutionOptionWithCustomOverride.hpp
        ResonanceAudio.hpp
        ResonanceAudio_enums.hpp
        Resource_Bees.hpp
        Resource_Berries.hpp
        Resource_BigCart.hpp
        Resource_Clay.hpp
        Resource_Eel.hpp
        Resource_Fish.hpp
        Resource_Handcart.hpp
        Resource_Iron.hpp
        Resource_Ladder.hpp
        Resource_Mushrooms.hpp
        Resource_Salt.hpp
        Resource_Stone.hpp
        retinueEditor.hpp
        retinueHead.hpp
        RetinueSet.hpp
        retinueSkill.hpp
        RigLogicModule.hpp
        RigLogicModule_enums.hpp
        RigVM.hpp
        RigVM_enums.hpp
        roadBP.hpp
        roadCurvatureBar_WorkAreaBar.hpp
        RotateInPlace_Asset.hpp
        RTSGame.hpp
        RTSMultiEngineCPP_BP.hpp
        RTSWidgetFunctions.hpp
        SaveBlueprint_Settings.hpp
        saveFinishedNotification.hpp
        saveSlot_widget.hpp
        SellingGood.hpp
        SequencerScripting.hpp
        SequencerScripting_enums.hpp
        Serialization.hpp
        SessionMessages.hpp
        SettingRow.hpp
        settlementInitializerWidget.hpp
        settlementLv_tooltip.hpp
        settlementTypeButton.hpp
        settlemtnLvRequirementWidget.hpp
        Shake_Clash.hpp
        shake_fire.hpp
        Shake_PlaceBuilding.hpp
        Shake_ToppleTree.hpp
        ShakeSmoothCombat.hpp
        SignificanceManager.hpp
        SimpleFrameWidgetA.hpp
        SkeletalMeshDescription.hpp
        skillButton.hpp
        skillTier.hpp
        SkyAtmosphereClouds_Blueprint.hpp
        Slate.hpp
        Slate_enums.hpp
        SlateCore.hpp
        SlateCore_enums.hpp
        SlateRHIRenderer.hpp
        SmartObjectsModule.hpp
        SmartObjectsModule_enums.hpp
        SocketSubsystemEOS.hpp
        SoundFields.hpp
        SoundUtilities.hpp
        Spatialization.hpp
        SpatialSystem.hpp
        SpatialSystem_enums.hpp
        SplineRiver.hpp
        Sprint_CameraShake.hpp
        squadStats.hpp
        squadTooltip.hpp
        squadWidget.hpp
        squareButton.hpp
        StallEntry.hpp
        stanceButton.hpp
        startVillageDragDropOpPayload.hpp
        startVillageEntry.hpp
        StateTreeModule.hpp
        StateTreeModule_enums.hpp
        StaticMeshDescription.hpp
        storageFilterCategory.hpp
        storageFilterGood.hpp
        storageFilterWidget.hpp
        StreamlineBlueprint.hpp
        StreamlineBlueprint_enums.hpp
        StreamlineDeepDVCBlueprint.hpp
        StreamlineDeepDVCBlueprint_enums.hpp
        StreamlineDLSSGBlueprint.hpp
        StreamlineDLSSGBlueprint_enums.hpp
        StreamlineReflexBlueprint.hpp
        StreamlineReflexBlueprint_enums.hpp
        StreamlineRHI.hpp
        StreamlineRHI_enums.hpp
        Struct_Translation.hpp
        Struct_VoiceLineData.hpp
        StyledActionLabel.hpp
        StyledActionMapping.hpp
        StyledAxisLabel.hpp
        StyledAxisMapping.hpp
        StyledBindCaptureButton.hpp
        StyledBindCapturePrompt.hpp
        StyledKeyLabel.hpp
        StyledKeySeparator.hpp
        StyledRadioButton.hpp
        StyledRadioButton_Icons.hpp
        SunPosition.hpp
        Synthesis.hpp
        Synthesis_enums.hpp
        SystemCore.hpp
        SystemCore_enums.hpp
        tabHint.hpp
        TakeMovieScene.hpp
        TargetingSystem.hpp
        TargetingSystem_enums.hpp
        targetStockWidget_tradeTarget.hpp
        taxOption.hpp
        taxWidget.hpp
        TcpMessaging.hpp
        TemplateSequence.hpp
        TemplateSequence_enums.hpp
        Text3D.hpp
        Text3D_enums.hpp
        textButton.hpp
        TextureUtilitiesCommon.hpp
        TextureUtilitiesCommon_enums.hpp
        ThunderLightBP.hpp
        TimeAllocationTrackerWidget.hpp
        TimeManagement.hpp
        TimeManagement_enums.hpp
        TimeSliceWidget.hpp
        TownName.hpp
        TR_Destination.hpp
        TR_Pop.hpp
        TraceUtilities.hpp
        TradeRouteConfirm.hpp
        tradeRuleWidget.hpp
        traitWidget.hpp
        transactionLog.hpp
        transactionLog_GoodIcon.hpp
        transactionLogEntry.hpp
        Transient.hpp
        TranslationCategory_enums.hpp
        tt_keybind.hpp
        TurnInPlace_Asset.hpp
        tutorialMessage.hpp
        TutorialSubsection.hpp
        TypedElementFramework.hpp
        TypedElementFramework_enums.hpp
        TypedElementRuntime.hpp
        TypedElementRuntime_enums.hpp
        UdpMessaging.hpp
        UdpMessaging_enums.hpp
        UI_UnitStats.hpp
        UMG.hpp
        UMG_enums.hpp
        unitCard.hpp
        unitEditor.hpp
        unitTrait.hpp
        unitView.hpp
        UniversalObjectLocator.hpp
        UniversalObjectLocator_enums.hpp
        UnrealUSDWrapper.hpp
        UnrealUSDWrapper_enums.hpp
        UObjectPlugin.hpp
        upgradeWidget.hpp
        USDClasses.hpp
        USDClasses_enums.hpp
        VAMP_Chicken.hpp
        VAMP_DefaultUnit.hpp
        VAMP_Goat.hpp
        VAMP_Hare.hpp
        VAMP_Horse.hpp
        VAMP_Mule.hpp
        VAMP_Ox.hpp
        VAMP_Pig.hpp
        VAMP_Raven.hpp
        VAMP_Sheep.hpp
        VAMP_SpatialGridSettings.hpp
        VariantManagerContent.hpp
        VariantManagerContent_enums.hpp
        VectorVM_enums.hpp
        VelocityBlend.hpp
        VertexAnimationManager.hpp
        VertexAnimationManager_enums.hpp
        VerticalRadioSelect.hpp
        Water.hpp
        Water_enums.hpp
        WaveTable.hpp
        WaveTable_enums.hpp
        WBP_Approval.hpp
        Widget_Affinity.hpp
        Widget_EnvironmentView.hpp
        Widget_Frame_Scroll_Simple.hpp
        Widget_HeaderBg.hpp
        Widget_ItemCounter.hpp
        Widget_ItemSubcategoryEntry.hpp
        Widget_ItemSubcategoryTooltip.hpp
        wiki_clickable.hpp
        wiki_nonClickableText.hpp
        wiki_spacer.hpp
        Wiki_Subject.hpp
        wiki_wrapBox_paragraph.hpp
        WikiSubjectData.hpp
        windmillEfficiency.hpp
        WinDualShock.hpp
        WmfMediaFactory.hpp
        workAreaConfirmationBlop.hpp
        workerAssignment.hpp
        workerSlot_DUPL_1.hpp
        WorkplaceLimitEntry.hpp
        WorkplaceLimitsWidget.hpp
        WorldConditions.hpp
        WorldConditions_enums.hpp
        WorldMetricsCore.hpp
        XeFGBlueprint.hpp
        XeFGBlueprint_enums.hpp
        XeLLBlueprint.hpp
        XeLLBlueprint_enums.hpp
        XeSSBlueprint.hpp
        XeSSBlueprint_enums.hpp
        XeSSCore.hpp
        YieldModifierEntryWidget.hpp
        ZoneGraph.hpp
        ZoneGraph_enums.hpp
        ZoneGraphAnnotations.hpp
        ZoneGraphAnnotations_enums.hpp
        ZoneGraphDebug.hpp
        cmake-build-debug/main.cpp)
